--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -203,3 +203,7 @@ h1 {
     background-repeat: no-repeat;
     background-position: center;
 }
+
+.select2-container--krajee .select2-selection {
+    border-radius: 4px 0 0 4px;
+}
